--- a/index.html
+++ b/index.html
@@ -1,15 +1,52 @@
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Data Visualisation Project _ Scatter Plot Graph</title>
 </head>
-<body>
-    
 
-<h1>Scatter Plot Graph</h1>
+<body>
+
+    <h1>Scatter Plot Graph</h1>
+
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+    <script src="https://d3js.org/d3.v7.min.js"></script>
+    <script>
+
+        const w = window.innerWidth - 50;
+        const h = window.innerHeight - 200;
+   
+
+        let svg = d3.select("body")
+            .append("div")
+            .attr("class", "scatter-graph")
+            .append("svg")
+            .attr("width", w)
+            .attr("height", h)
+            .attr("style", "background:blue");
+
+        fetch("https://raw.githubusercontent.com/freeCodeCamp/ProjectReferenceData/master/cyclist-data.json")
+        .then(response=>response.json())
+        .then(data=>{
+            dataString = JSON.stringify(data);
+  
+            
+            d3.select("body")
+            .append("text")
+            .attr("x","5")
+            .attr("y","5")
+            .text(data.map((x)=>x.Year));
+        });
+
+
+    </script>
+
+
+
 
 
 </body>
+
 </html>
