--- a/index.html
+++ b/index.html
@@ -36,8 +36,10 @@
                 let time =data.map((x)=>x.Time);
 
            //set xScale
-          const xScale = d3.scaleLinear()
-                    .domain([d3.min(data,(d)=> d.Year),d3.max(data,(d)=>d.Year)])
+
+           let parseTime = d3.timeParse("%Y");
+          const xScale = d3.scaleTime()
+                    .domain([d3.min(data,(d)=> parseTime(d.Year)),d3.max(data,(d)=>parseTime(d.Year))])
                    .range([padding, w-padding]);
 
                   //  const yScale = d3.scaleLinear()
