--- a/index.html
+++ b/index.html
@@ -10,15 +10,16 @@
 
 <body>
 
-    <h1>Scatter Plot Graphs</h1>
+    <div class="heading">Doping in Professional Bicycle Racing</div>
+    <div class="sub-heading">35 Fastest times up Alpe d'Huez</div>
 
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <script>
 
-        const w = window.innerWidth - 50;
-        const h = window.innerHeight - 200;
-        const padding = 60;
+        const w = window.innerWidth - 150;
+        const h = window.innerHeight - 250;
+        const padding = 100;
 
         const svg = d3.select("body")
             .append("div")
@@ -26,11 +27,11 @@
             .append("svg")
             .attr("width", w)
             .attr("height", h)
-            .attr("style", "background:white");
+        //  .attr("style", "background:white");
 
-        const tooltip = d3.select("svg")
+        const tooltip = d3.select("body")
             .append("div")
-            .attr("id","tooltip")
+            .attr("id", "tooltip")
 
         fetch("https://raw.githubusercontent.com/freeCodeCamp/ProjectReferenceData/master/cyclist-data.json")
             .then(response => response.json())
@@ -42,87 +43,106 @@
                 //set xScale
                 let parseYear = d3.timeParse("%Y"); //ensure that data.year is formated as a year for d3
                 const xScale = d3.scaleTime()
-                    .domain([d3.min(data, (d) => (parseYear(d.Year-1))), d3.max(data, (d) => (parseYear(d.Year)))])
+                    .domain([d3.min(data, (d) => (parseYear(d.Year - 1))), d3.max(data, (d) => (parseYear(d.Year)))])
                     .range([padding, w - padding]);
 
                 //set yScale    
                 let parseTime = d3.timeParse("%M:%S");
                 const yScale = d3.scaleTime()
                     .domain([parseTime(d3.min(data, (d) => (d.Time))), parseTime(d3.max(data, (d) => (d.Time)))])
-                    .range([h - padding, padding]);
+                    .range([padding, h - padding]);
 
                 //set up xAxis
-                const xAxis = d3.axisBottom(xScale);
+                const xAxis = d3.axisBottom(xScale)
+                    .tickPadding(10)
+                    .tickSize(-h+200);
+
                 svg.append("g")
                     .attr("id", "x-axis")
                     .attr("transform", "translate(0," + (h - padding) + ")")
                     .attr("id", "x-axis")
                     .call(xAxis);
+                //x-axis title
+                svg.append("text")
+                    .attr("text-anchor", "middle")
+                    .attr("x", w / 2)
+                    .attr("y", h - padding + 50)
+                    .text("Year");
 
                 //set up yAxis
-                const yAxis = d3.axisLeft(yScale).tickFormat(d3.timeFormat("%M:%S")); //sets the format of the axis ticks
+                const yAxis = d3.axisLeft(yScale).tickFormat(d3.timeFormat("%M:%S"))
+                .tickPadding(10)
+                .tickSize(-w+padding+100); //sets the format of the axis ticks
 
                 svg.append("g")
                     .attr("id", "y-axis")
                     .attr("transform", "translate(" + padding + "," + 0 + ")")
                     .attr("id", "y-axis")
                     .call(yAxis);
-
+                //y-axis title
+                svg.append("text")
+                    .attr("text-anchor", "middle")
+                    .attr("x", -h / 2)
+                    .attr("y", padding - 50)
+                    .attr("transform", "rotate(-90)")
+                    .text("Time in Minutes");
 
 
                 svg.selectAll("circle")
-                .data(data)
-                .enter()
-                .append("circle")
-                .attr("class","dot")
-                .attr("data-xvalue",(d)=>(parseYear(d.Year)))
-                .attr("data-yvalue",(d)=>(parseTime(d.Time)))
-                .attr("cx",(d)=>xScale(parseYear(d.Year)))
-                .attr("cy",(d)=>yScale(parseTime(d.Time)))
-                .attr("r",(d)=>5)
-                .on("mouseover", function(event, d){
-                    tooltip
-                    .transition()
-                    .duration(200)
-                    .style("opacity",0.9);
-                    tooltip
-                    .html("tester")
-                  // .style("position","absolute")
-                    .style("left",event.clientX+20+"px")
-                    .style("right",event.clientY+20+"px");
-                })
-                .on("mouseout", function(event,d){
-                    tooltip
-                    .transition()
-                    .style("opacity",0);
-                });
+                    .data(data)
+                    .enter()
+                    .append("circle")
+                    .attr("class", "dot")
+                    .attr("data-xvalue", (d) => (parseYear(d.Year)))
+                    .attr("data-yvalue", (d) => (parseTime(d.Time)))
+                    .attr("cx", (d) => xScale(parseYear(d.Year)))
+                    .attr("cy", (d) => yScale(parseTime(d.Time)))
+                    .attr("r", (d) => 5)
+                    .style("fill", function (d) {
+                        if (d.Doping == "") { return "green" }
+                        else { return "red" };
+                    })
+                    .on("mouseover", function (event, d) {
+                        tooltip
+                            .transition()
+                            .duration(200)
+                            .style("opacity", 0.9)
+                            .style("padding", "5px");
+                        tooltip
+                            .html("<b>Name:</b>" + d.Name + "</br> <b>Nat:</b>" + d.Nationality + "</br> <b>Place:</b>" + d.Place + ", <b>Year:</b>" + d.Year + ", <b>Time:</b>" + d.Time + "mins" + "</br><i>" + d.Doping + "</i>")
+                            .style("left", event.clientX + 20 + "px")
+                            .style("top", event.clientY + 20 + "px")
+
+
+                        tooltip
+                            .attr("data-year", (parseYear(d.Year)));
+                    })
+                    .on("mouseout", function (event, d) {
+                        tooltip
+                            .transition()
+                            .style("opacity", 0);
+                    });
 
 
 
-                d3.select("body")
-                    .append("text")
-                    .attr("x", "5")
-                    .attr("y", "5")
-                    .text(data.map((x) => x.Year));
 
-                d3.select("body")
-                    .append("text")
-                    .attr("x", "5")
-                    .attr("y", "5")
-                    .text(data.map((x) => x.Time + " - p - " + (new Date(parseTime(x.Time)))));
 
-                d3.select("body")
-                    .append("text")
-                    .attr("x", "5")
-                    .attr("y", "5")
-                    .text(dataString);
+                //create legend
+                d3.select("body").append("div")
+                    .style("left", w - padding - 60)
+                    .attr("id", "legend")
+                    .html("<div class='box-1'></div><div>No doping allegations</div></br><div class='box-2'></div><div>Riders with doping allegations</div>")
+
+
+
+
 
             });
 
 
     </script>
 
-
+    <div class="footer">D3 Data Visualisation Project by Andrew Formosa for freeCodeCamp</div>
 
 
 
